fix: overflow scrolling in Safari

--- a/styles/06-components/Library.css
+++ b/styles/06-components/Library.css
@@ -3,7 +3,6 @@
   max-height: 100%;
   overflow-y: auto;
   grid-area: Main;
-  height: 100%;
   display: grid;
   grid-template-rows: 2rem 1fr;
   padding-left: 1rem;
